<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclcpp_components</name>
  <version>0.0.0</version>
  <description>
    Tools, CMake macros, and redistributed C++ code that support building nodes as components.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <depend>class_loader</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
