<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_cmake_auto</name>
  <version>0.0.0</version>
  <description>CMake macros to automate building ROS 2 Nodes and related tasks.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_export_depend>ament_cmake_auto</buildtool_export_depend>

  <depend>class_loader</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
