<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>examples_empty_node</name>
  <version>0.0.0</version>
  <description>Example package with an empty Node called empty_node.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ros_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
